source/sass/blocks/_page-footer.scss
.page-footer {
  padding: 145px 0 20px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #ffffff;
}

.page-footer__hash-tag {
  margin-bottom: 40px;
}

.page-footer__social {
  margin-bottom: 40px;
}

@media (min-width: $tablet-width) {
  .page-footer {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: baseline;
    padding: 75px 0;
  }

  .page-footer__hash-tag {
    margin-bottom: 0;
  }

  .page-footer__social {
    margin-bottom: 0;
  }
}

